--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<version>1.18.30</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
